<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/SignupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/readex_bold"
            android:gravity="center"
            android:text="@string/Signup"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignupText">

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:hint="@string/fName" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:hint="@string/mName" />

            <EditText
                android:id="@+id/etFamilyName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:hint="@string/lName" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:hint="@string/email"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etBio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:hint="@string/Bio"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:inputType="text" />

            <EditText
                android:id="@+id/etBirthday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:hint="@string/BirthdayYear"
                android:inputType="number"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:maxLength="4" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:hint="@string/Address" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:hint="@string/MobileNumber"
                android:inputType="number"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:maxLength="12" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:hint="@string/Password"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:hint="@string/ConfirmPassword"
                android:fontFamily="@font/readex_regular"
                android:textSize="15sp"
                android:inputType="textPassword" />

            <RadioGroup
                android:id="@+id/rgRole"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/blue"
                    android:fontFamily="@font/readex_regular"
                    android:layout_marginEnd="20dp"
                    android:textSize="15sp"
                    android:text="@string/Student" />

                <RadioButton
                    android:id="@+id/rbTeacher"
                    android:fontFamily="@font/readex_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue"
                    android:textSize="15sp"
                    android:text="@string/Teacher" />
            </RadioGroup>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:text="@string/Signup"
                android:textSize="17sp"
                android:fontFamily="@font/readex_bold"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:fontFamily="@font/readex_regular"
            android:text="@string/tvLoginFromSignup"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputs" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>