<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/screenTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_bold"
                android:gravity="start"
                android:text="@string/Home"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnDashboard"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:layout_gravity="end|bottom"
                android:background="@drawable/btn_bg"
                android:src="@drawable/ic_dashboard" />
        </LinearLayout>

        <TextView
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Search"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/readex_regular"
            android:drawableEnd="@drawable/ic_search"
            android:drawableTint="@color/gray"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/et_bg"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/category_item"
            tools:itemCount="20"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/readex_bold"
                android:text="@string/recommended"/>

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/course_item"
            tools:itemCount="10"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:fontFamily="@font/readex_bold"
            android:text="@string/MyCourses"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRegisteredCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            tools:listitem="@layout/registered_courses_item"
            app:spanCount="2"
            tools:itemCount="6"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
