<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.Profile.EditProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic__left"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/screenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/readex_bold"
                android:gravity="center"
                android:text="@string/editProfile"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/backIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backIcon" />


            <LinearLayout
                android:id="@+id/inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backIcon">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/readex_regular"
                    android:text="First Name"
                    android:textColor="@color/gray_dark" />

                <EditText
                    android:id="@+id/EditFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="@font/readex_regular"
                    android:text="@string/fName"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/readex_regular"
                    android:text="Middle Name"
                    android:textColor="@color/gray_dark" />

                <EditText
                    android:id="@+id/EditMiddleName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="@font/readex_regular"
                    android:text="@string/mName"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/readex_regular"
                    android:text="Last Name"
                    android:textColor="@color/gray_dark" />

                <EditText
                    android:id="@+id/EditLastName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="@font/readex_regular"
                    android:text="@string/lName"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/readex_regular"
                    android:text="Email"
                    android:textColor="@color/gray_dark" />

                <EditText
                    android:id="@+id/EditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="@font/readex_regular"
                    android:inputType="textEmailAddress"
                    android:text="@string/email"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/readex_regular"
                    android:text="Bio"
                    android:textColor="@color/gray_dark" />

                <EditText
                    android:id="@+id/EditBio"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="@font/readex_regular"
                    android:inputType="text"
                    android:text="@string/Bio"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/readex_regular"
                    android:text="@string/BirthdayYear"
                    android:textColor="@color/gray_dark" />

                <EditText
                    android:id="@+id/EditBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="@font/readex_regular"
                    android:inputType="number"
                    android:maxLength="4"
                    android:text="@string/BirthdayYear"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/readex_regular"
                    android:text="@string/Address"
                    android:textColor="@color/gray_dark" />

                <EditText
                    android:id="@+id/EditAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="@font/readex_regular"
                    android:text="@string/Address"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/readex_regular"
                    android:text="Phone"
                    android:textColor="@color/gray_dark" />

                <EditText
                    android:id="@+id/EditPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="@font/readex_regular"
                    android:inputType="number"
                    android:maxLength="12"
                    android:text="@string/MobileNumber"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/readex_bold"
                    android:text="@string/editProfile"
                    android:textAllCaps="false"
                    android:textSize="17sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>